src/app/welcome-banner/welcome-banner.component.css
:host{
  display: block;
  /*background-color: rgb(246,247,189);*/
}

#welcome {
  width: 90%;
  height: auto;
}

.jump{
  background-color: rgb(128,188,163);
  height: 70px;
}

.glyphicon{
  /*position: relative;*/
  margin-left: 50%;
  margin-top: 30px;
}

h3{
  font-style: italic;
  margin-top: 275px;
  margin-bottom: 275px;
}

